--- a/azure.yaml
+++ b/azure.yaml
@@ -2,7 +2,11 @@
 
 name: agents-starter-template
 services:  
-  app:
+  backend:
     language: dotnet
-    project: ./src/Agents.AppHost/Agents.AppHost.csproj
+    project: ./src/api/Agents.Api.csproj
+    host: containerapp
+  frontend:
+    language: node
+    project: ./src/frontend
     host: containerapp
