--- a/src/api/Agents.Api.csproj
+++ b/src/api/Agents.Api.csproj
@@ -26,6 +26,7 @@
 
     <PackageReference Include="Microsoft.Extensions.Azure" Version="1.7.3" />
     <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.0.0-preview.3.24209.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
     <PackageReference Include="Azure.Identity" Version="1.12.0-beta.1" />
 
     <PackageReference Include="ProjectOagents.Core" Version="0.0.1-alpha" />
